2004.01.12 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: remove TDiaryTrackBackBase#trackback_url.
	* tdiary.rb: use @conf.base_url in TDiaryTrackBackBase#diary_url.

2004.01.12 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: if trackback is longer than 255 byte, it will be shorten to 252 byte and '...' will be added.

2004.01.09 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: meta link support HTML 4.01.

2003.12.30 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/00default.rb: my can handle 'yyyymmdd#txx'.
	* wiki_style.rb: strip_subtitle returns nil if sibtitle == ''. thanks to YAA.

2003.12.26 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/pstoreio.rb: fix bug: enable running 1.5.6 or later.

2003.12.26  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb(trackback_url): HTTP_HOST -> SERVER_NAME.
	(base_url): return '' in non CGI case.

2003.12.26 Junichiro Kita <kita@kitaj.no-ip.com>
	* skel/mail.rtxt*: add comment's URL in the body.

2003.12.25 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: TDiaryBase#clear_cache support parameter of file name pattern.

2003.12.26 Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* misc/style/wiki/wiki_style.rb: bug fix of parsing categories. thanks to yowa.

2003.12.26 Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* tdiary.rb: catch StandardError when broken cache.

2003.12.20 Kazuhiko  <kazuhiko@fdiary.net>
	* misc/style/rd/rd_style.rb: bug fix. 

2003.12.19 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, update.rb: set $KCODE to 'n'.

2003.12.19 Fri UECHI Yasumasa <uh@u.dhis.portside.net>
	* misc/style/rd/rd_style.rb: accept lower level headlines without upper level headlines.

2003.12.18 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: save theme conf before call header_proc.

2003.12.16 Takeru KOMORIYA <komoriya@paken.org>
	* tdiary.rb: do not count up last-modified when the diary disabled.

2003.12.16 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: accept fuzzy anchor style.

2003.12.11 TADA Tadashi <sho@spc.gr.jp>